# hcft-analyst-agent

./: .env.example  .gitignore  DECISIONS.md  JD.md  PLAN.md  README.md  SESSION_HANDOFF.md  adversarial_langgraph_interview_pack.md  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
docs/: ARCHITECTURE.md  CONCEPTS.md  HANDOFF_AGENT2.md  RAG_AGENT_TUTORIAL.md  SESSION_LOG.md  V2_BACKLOG.md  agent_anatomy.html  guardrail_rings.html  pipeline_map.html
reference/: README.md  m2_research_rag.py  m3_hitl_rag.py
scripts/: build_eval_dashboard.py  build_eval_set_v3.py  eval_context_guard.py  filter_generic_qa.py  migrate_chunks.py  recover_report_from_langsmith.py  retrieval_ab.py  smoke_telemetry.py  verify_mongo.py
src/hcft_agent/: config.py  generate.py  retriever.py
src/hcft_agent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/hcft_agent/agents/: rag_chat.py  state.py
src/hcft_agent/eval/: agent_eval.py  experiment.py  judges.py  report.py  retrieval.py  run_eval.py  validate.py
src/hcft_agent/graphs/: __init__.py  m1_react.py
src/hcft_agent/guards/: context_ring.py  groundedness.py  injection.py  input_ring.py  pii.py
src/hcft_agent/obs/: attributes.py  telemetry.py
tests/: test_context_guard.py  test_eval_gate.py
ui/: app.py
